fixed UI of service-menu on mobile

--- a/css/price.sass
+++ b/css/price.sass
@@ -31,6 +31,7 @@
           +box-sizing(border-box)
           padding: 3px 0
           width: 100%
+          border-radius: 0
       .content
         font-size: 12px
         table
